Update email subscription page so spacing is correct (add divs and css for the divs)

--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Settings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.email-subscription-checkbox {
+  padding-bottom: 5px;
+}
+
+.email-subscription-checkbox label {
+  display: inline;
+}
